Update to add authentication